--- a/.env.testing
+++ b/.env.testing
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
 DB_PORT=5432
-DB_DATABASE=test_db
+DB_DATABASE=testing
 DB_USERNAME=laravel_user
 DB_PASSWORD=laravel_pass
 
